--- a/com.upload.web/pom.xml
+++ b/com.upload.web/pom.xml
@@ -26,4 +26,32 @@
     <build>
         <finalName>com.upload.web</finalName>
     </build>
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+
+                <!-- mysql -->
+                <jdbc.url>
+                    <![CDATA[jdbc:mysql://192.168.89.47:3306/passport?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull]]>
+                </jdbc.url>
+                <jdbc.username>passport</jdbc.username>
+                <jdbc.password>111111</jdbc.password>
+                <!-- redis -->
+                <redis.pass>redis</redis.pass>
+                <redis.port>6379</redis.port>
+                <redis.host>192.168.89.47</redis.host>
+            </properties>
+        </profile>
+        <profile>
+            <id>pre</id>
+            <properties>
+            </properties>
+        </profile>
+        <profile>
+            <id>pro</id>
+            <properties>
+            </properties>
+        </profile>
+    </profiles>
 </project>
