--- a/com.upload.util/pom.xml
+++ b/com.upload.util/pom.xml
@@ -9,7 +9,7 @@
     <dependencies>
         <dependency>
             <groupId>com.60living</groupId>
-            <artifactId>com.common</artifactId>
+            <artifactId>com.springboot</artifactId>
             <version>1.1.0</version>
         </dependency>
         <dependency>
