--- a/com.upload.web/src/main/resources/bootstrap.properties
+++ b/com.upload.web/src/main/resources/bootstrap.properties
@@ -1,12 +1,12 @@
-#spring.application.name=upload
-#server.port=80
-#spring.aop.auto=true
-#debug=false
-#spring.profiles.active=dev
-#management.security.enabled=false
-#eureka.client.service-url.defaultZone=http://admin:admin@center.60community.com/eureka/
-#spring.cloud.config.discovery.enabled=true
-#spring.cloud.config.discovery.serviceId=config
+spring.application.name=upload
+server.port=80
+spring.aop.auto=true
+debug=false
+spring.profiles.active=dev
+management.security.enabled=false
+eureka.client.service-url.defaultZone=http://admin:admin@center.60community.com/eureka/
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config
 
 spring.datasource.username=upload
 spring.datasource.password=111111
