--- a/com.upload.web/src/main/resources/bootstrap.properties
+++ b/com.upload.web/src/main/resources/bootstrap.properties
@@ -1,15 +1,18 @@
 spring.application.name=upload
-server.port=8020
+server.port=8003
+debug=true
 spring.aop.auto=true
 spring.profiles.active=dev
 management.security.enabled=false
-eureka.client.service-url.defaultZone=http://admin:admin@center.60community.com/eureka/
+eureka.client.service-url.defaultZone=http://admin:adminadminadmin@center.60community.com/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
 
+
+
 spring.datasource.username=upload
-spring.datasource.password=111111
-spring.datasource.url=jdbc:mysql://192.168.89.47:3306/upload?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+spring.datasource.password=upload
+spring.datasource.url=jdbc:mysql://39.108.235.9:3306/upload?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.redis.url=redis://:redis@192.168.89.47:6379/2
+spring.redis.url=redis://:redis@39.108.233.87:6379/2
 app.fileRootPath=/home/upload/fileroot
