change to params

--- a/com.upload.web/src/main/resources/bootstrap.properties
+++ b/com.upload.web/src/main/resources/bootstrap.properties
@@ -7,8 +7,8 @@ management.security.enabled=false
 eureka.client.service-url.defaultZone=http://admin:admin@center.60community.com/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
-
-
+spring.http.multipart.max-file-size=50Mb
+spring.http.multipart.maxRequestSize=50Mb
 
 spring.datasource.username=upload
 spring.datasource.password=upload
