change to params

--- a/com.upload.web/src/main/resources/bootstrap.properties
+++ b/com.upload.web/src/main/resources/bootstrap.properties
@@ -1,14 +1,13 @@
 spring.application.name=upload
 server.port=8003
-debug=true
 spring.aop.auto=true
 spring.profiles.active=dev
 management.security.enabled=false
-eureka.client.service-url.defaultZone=http://admin:admin@center.60community.com/eureka/
+eureka.client.service-url.defaultZone=http://admin:adminadminadmin@center.60community.com/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
-spring.http.multipart.max-file-size=50Mb
-spring.http.multipart.maxRequestSize=50Mb
+spring.http.multipart.max-file-size=100Mb
+spring.http.multipart.maxRequestSize=200Mb
 
 spring.datasource.username=upload
 spring.datasource.password=upload
