--- a/com.upload.domain/pom.xml
+++ b/com.upload.domain/pom.xml
@@ -20,6 +20,10 @@
                     <artifactId>spring-data-mongodb</artifactId>
                     <groupId>org.springframework.data</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>mongo-java-driver</artifactId>
+                    <groupId>org.mongodb</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
