change to params

--- a/com.upload.web/src/main/resources/bootstrap.properties
+++ b/com.upload.web/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ server.port=8003
 spring.aop.auto=true
 spring.profiles.active=dev
 management.security.enabled=false
-eureka.client.service-url.defaultZone=http://admin:adminadminadmin@center.60community.com/eureka/
+eureka.client.service-url.defaultZone=http://admin:admina@center.60community.com/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
 spring.http.multipart.max-file-size=100Mb
