--- a/com.upload.util/pom.xml
+++ b/com.upload.util/pom.xml
@@ -12,6 +12,11 @@
             <artifactId>com.springboot</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>junit</groupId>-->
             <!--<artifactId>junit</artifactId>-->
