--- a/com.upload.web/src/main/resources/bootstrap.properties
+++ b/com.upload.web/src/main/resources/bootstrap.properties
@@ -1,17 +1,13 @@
 spring.application.name=upload
 server.port=80
 spring.aop.auto=true
-spring.profiles.active=dev
-management.security.enabled=false
-eureka.client.serviceUrl.defaultZone=http://admin:admin@center.60community.com/eureka/
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceId=config
 spring.http.multipart.max-file-size=100Mb
 spring.http.multipart.maxRequestSize=200Mb
-
-spring.datasource.username=upload
-spring.datasource.password=upload
-spring.datasource.url=jdbc:mysql://192.168.89.47:3306/upload?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.datasource.url=jdbc:mysql://localhost:3306/upload?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.redis.url=redis://:redis@192.168.89.47:6379/2
+spring.redis.url=redis://127.0.0.1:6379/2
 app.fileRootPath=/home/upload/fileroot
+
+app.domain=img.60community.com
