--- a/com.upload.web/src/main/resources/bootstrap.properties
+++ b/com.upload.web/src/main/resources/bootstrap.properties
@@ -8,11 +8,11 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
 spring.http.multipart.max-file-size=100Mb
 spring.http.multipart.maxRequestSize=200Mb
-spring.datasource.username=upload
-spring.datasource.password=upload
-spring.datasource.url=jdbc:mysql://192.168.89.47:3306/upload?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/upload?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.redis.url=redis://:redis@192.168.89.47:6379/2
+spring.redis.url=redis://127.0.0.1:6379/2
 
 app.fileRootPath=/home/upload/fileroot
 app.domain=img.60community.com
