--- a/com.upload.web/src/main/resources/bootstrap.properties
+++ b/com.upload.web/src/main/resources/bootstrap.properties
@@ -12,7 +12,7 @@ spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/upload?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.redis.url=redis://127.0.0.1:6379/2
+spring.redis.url=redis://:redis@127.0.0.1:6379/1
 
 app.fileRootPath=/home/upload/fileroot
 app.domain=img.60community.com
