--- a/com.upload.util/pom.xml
+++ b/com.upload.util/pom.xml
@@ -10,12 +10,14 @@
         <dependency>
             <groupId>com.60living</groupId>
             <artifactId>com.springboot</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
+            <scope>test</scope>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>junit</groupId>-->
