--- a/com.upload.domain/pom.xml
+++ b/com.upload.domain/pom.xml
@@ -12,19 +12,9 @@
     <artifactId>com.upload.domain</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.60living</groupId>
-            <artifactId>com.springboot</artifactId>
-            <version>1.1.3</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>spring-data-mongodb</artifactId>
-                    <groupId>org.springframework.data</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>mongo-java-driver</artifactId>
-                    <groupId>org.mongodb</groupId>
-                </exclusion>
-            </exclusions>
+            <groupId>springboot</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
     <build>
