--- a/com.upload.web/pom.xml
+++ b/com.upload.web/pom.xml
@@ -9,10 +9,6 @@
     <artifactId>com.upload.web</artifactId>
     <name>com.upload.web Maven Webapp</name>
     <url>http://maven.apache.org</url>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>com.60living</groupId>
@@ -31,9 +27,20 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <build>
-        <finalName>upload</finalName>
+        <finalName>main</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
