--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -1,11 +1,9 @@
+server.port=80
+server.tomcat.basedir=/home/upload/temp/
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/upload
 spring.application.name=upload
-server.port=7000
-spring.http.multipart.max-file-size=100Mb
-spring.http.multipart.maxRequestSize=200Mb
-spring.datasource.username=root
-spring.datasource.password=rootroot
-spring.datasource.url=jdbc:mysql://192.168.31.3:3306/upload?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.redis.url=redis://192.168.31.3:6379
+spring.servlet.multipart.max-file-size=104857600
+spring.servlet.multipart.max-request-size=104857600
+spring.redis.url=redis://127.0.0.1:6379
 app.fileRootPath=/home/upload/fileroot
 app.domain=image.jiahou.com
