--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,14 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>com.upload.dao</module>
         <module>com.upload.domain</module>
         <module>com.upload.service</module>
         <module>com.upload.web</module>
-        <!--<module>com.upload.util</module>-->
     </modules>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
     <build>
         <resources>
             <resource>
