--- a/com.upload.service/pom.xml
+++ b/com.upload.service/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>com.upload.domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
