--- a/com.upload.web/pom.xml
+++ b/com.upload.web/pom.xml
@@ -14,6 +14,16 @@
             <groupId>com.60living</groupId>
             <artifactId>com.upload.service</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     <dependencyManagement>
