修改图片压缩算法与数据库为mongodb

--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-server.port=80
+server.port=8081
 server.tomcat.basedir=/home/upload/temp/
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/upload
 spring.application.name=upload
 spring.servlet.multipart.max-file-size=104857600
 spring.servlet.multipart.max-request-size=104857600
-spring.redis.url=redis://127.0.0.1:6379
-app.fileRootPath=/home/upload/fileroot
-app.domain=image.jiahou.com
+app.fileRootPath=E:/movie/images
+app.domain=image.movie.com
