--- a/com.upload.service/pom.xml
+++ b/com.upload.service/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>thumbnailator</artifactId>
             <version>0.4.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
