修改图片压缩算法与数据库为mongodb

--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=8081
+server.port=80
 server.tomcat.basedir=/home/upload/temp/
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/upload
+spring.data.mongodb.uri=mongodb://192.168.0.20:17017,192.168.0.20:27017/upload
+spring.redis.url=redis://192.168.0.110:6379
 spring.application.name=upload
 spring.servlet.multipart.max-file-size=104857600
 spring.servlet.multipart.max-request-size=104857600
