--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -1,9 +1,23 @@
-server.port=80
+server.port=3000
 server.tomcat.basedir=/home/upload/temp/
 spring.data.mongodb.uri=mongodb://192.168.0.20:17017,192.168.0.20:27017/upload
 spring.redis.url=redis://192.168.0.110:6379
 spring.application.name=upload
 spring.servlet.multipart.max-file-size=104857600
 spring.servlet.multipart.max-request-size=104857600
+
 app.fileRootPath=E:/movie/images
-app.domain=image.movie.com
+
+
+xxl.job.admin.addresses=http://job.bsm.com:8080/xxl-job-admin
+xxl.job.executor.appname=upload-app
+xxl.job.executor.ip=
+xxl.job.executor.port=3008
+xxl.job.accessToken=
+xxl.job.executor.logpath=/logs
+xxl.job.executor.logretentiondays=-1
+
+async.executor.thread.core_pool_size=10
+async.executor.thread.max_pool_size=20
+async.executor.thread.queue_capacity=99999
+async.executor.thread.name.prefix=async-executor-main
