修改图片压缩算法与数据库为mongodb

--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=3000
-server.tomcat.basedir=/home/upload/temp/
+server.port=8081
+server.tomcat.basedir=/tomcat
 spring.data.mongodb.uri=mongodb://192.168.0.20:17017,192.168.0.20:27017/upload
 spring.redis.url=redis://192.168.0.110:6379
 spring.application.name=upload
 spring.servlet.multipart.max-file-size=104857600
 spring.servlet.multipart.max-request-size=104857600
 
-app.fileRootPath=E:/movie/images
+app.fileRootPath=/data
 
 
 xxl.job.admin.addresses=http://job.bsm.com:8080/xxl-job-admin
