--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.servlet.multipart.max-request-size=104857600
 app.fileRootPath=/data
 
 
-xxl.job.admin.addresses=http://job.bsm.com:8080/xxl-job-admin
+xxl.job.admin.addresses=http://job.bsm.com
 xxl.job.executor.appname=upload-app
 xxl.job.executor.ip=
 xxl.job.executor.port=3008
