--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -5,10 +5,8 @@ spring.redis.url=redis://192.168.0.110:6379
 spring.application.name=upload
 spring.servlet.multipart.max-file-size=104857600
 spring.servlet.multipart.max-request-size=104857600
-
 app.fileRootPath=/data
-
-
+#job
 xxl.job.admin.addresses=http://job.bsm.com
 xxl.job.executor.appname=upload-app
 xxl.job.executor.ip=
@@ -16,7 +14,7 @@ xxl.job.executor.port=3008
 xxl.job.accessToken=
 xxl.job.executor.logpath=/logs
 xxl.job.executor.logretentiondays=-1
-
+#thread
 async.executor.thread.core_pool_size=10
 async.executor.thread.max_pool_size=20
 async.executor.thread.queue_capacity=99999
