Revert "修改图片压缩算法与数据库为mongodb"
This reverts commit 508ef3dc037a14db85dd3b66498ab0f1c7d760dc.

# Conflicts:
#	com.upload.service/src/main/java/com/upload/service/FileInfoService.java
#	com.upload.service/src/main/java/com/upload/service/impl/FileInfoServiceImpl.java
#	com.upload.service/src/main/java/com/upload/service/utils/CmdToolkit.java
#	com.upload.service/src/main/java/com/upload/service/utils/FFMPegUtils.java
#	com.upload.web/pom.xml
#	com.upload.web/src/main/java/com/upload/main/controller/FileInfoController.java
#	com.upload.web/src/main/java/com/upload/main/job/VideoJobHandler.java
#	com.upload.web/src/main/resources/application.properties

--- a/com.upload.web/pom.xml
+++ b/com.upload.web/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <artifactId>com.upload</artifactId>
+        <groupId>com.60living</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>com.upload.web</artifactId>
@@ -15,51 +15,30 @@
             <artifactId>com.upload.service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Finchley.RELEASE</version>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
     <build>
         <finalName>app</finalName>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                </includes>
-                <filtering>false</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/resources/</directory>
-                <includes>
-                    <include>Dockerfile</include>
-                </includes>
-                <filtering>false</filtering>
-                <targetPath>${project.basedir}/target</targetPath>
-            </resource>
-        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>${spring-boot.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>utf-8</encoding>
+                    <mainClass>com.upload.main.application.UploadApplication</mainClass>
+                    <layout>ZIP</layout>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
