--- a/com.upload.domain/pom.xml
+++ b/com.upload.domain/pom.xml
@@ -16,5 +16,10 @@
             <artifactId>common</artifactId>
             <version>2.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>ws.schild</groupId>
+            <artifactId>jave-core</artifactId>
+            <version>2.7.3</version>
+        </dependency>
     </dependencies>
 </project>
