--- a/com.upload.service/pom.xml
+++ b/com.upload.service/pom.xml
@@ -23,6 +23,11 @@
             <version>0.4.8</version>
         </dependency>
         <dependency>
+            <groupId>com.bsm</groupId>
+            <artifactId>jave</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>23.0</version>
