--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.servlet.multipart.max-request-size=104857600
 
 app.fileRootPath=/data
 #job
-xxl.job.admin.addresses=http://job.bsm.com
+xxl.job.admin.addresses=http://job.inteeer.com
 xxl.job.executor.appname=upload-app
 xxl.job.executor.ip=
 xxl.job.executor.port=3008
