--- a/com.upload.web/pom.xml
+++ b/com.upload.web/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>com.upload.service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
