--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.servlet.multipart.max-file-size=104857600
 spring.servlet.multipart.max-request-size=104857600
 
 app.fileRootPath=/data
+
+app.ali.accessKey.id=
+app.ali.accessKey.secret=
 #job
 xxl.job.admin.addresses=http://job.inteeer.com
 xxl.job.executor.appname=upload-app
