--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.servlet.multipart.max-request-size=104857600
 
 app.fileRootPath=/data
 
-app.ali.accessKey.id=
+app.ali.accessKey.id=LTAI4GJijReQZWiB2tBYMHSm
 app.ali.accessKey.secret=
 #job
 xxl.job.admin.addresses=http://job.inteeer.com
