--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -6,10 +6,13 @@ spring.application.name=upload
 spring.servlet.multipart.max-file-size=104857600
 spring.servlet.multipart.max-request-size=104857600
 
+
 app.fileRootPath=/data
 
+#video
 app.ali.accessKey.id=LTAI4GJijReQZWiB2tBYMHSm
 app.ali.accessKey.secret=
+app.ali.video.call.back=http://upload.inteeer.com/callBack
 #job
 xxl.job.admin.addresses=http://job.inteeer.com
 xxl.job.executor.appname=upload-app
