--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -11,7 +11,7 @@ app.fileRootPath=/data
 
 #video
 app.ali.accessKey.id=LTAI4GJijReQZWiB2tBYMHSm
-app.ali.accessKey.secret=XCoZGf8q4GgDE6JUvXQ1KUyiBIOREV
+app.ali.accessKey.secret=
 app.ali.video.call.back=http://upload.inteeer.com/callBack
 #job
 xxl.job.admin.addresses=http://job.inteeer.com
