--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.servlet.multipart.max-request-size=104857600
 app.fileRootPath=/data
 
 #video
-app.ali.accessKey.id=LTAI4G2CN7uoAJSTGdHkLrTZ
-app.ali.accessKey.secret=VZmNyOwlUnWs3P0BcajtrXZQtoOPqY
+app.ali.accessKey.id=
+app.ali.accessKey.secret=
 app.ali.video.call.back=http://upload.inteeer.com/callBack
 #job
 xxl.job.admin.addresses=http://job.inteeer.com
