--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -17,3 +17,5 @@ xxl.job.executor.logretentiondays=-1
 async.executor.thread.core_pool_size=10
 async.executor.thread.max_pool_size=20
 async.executor.thread.queue_capacity=99999
+
+async.executor.thread.name.prefix=
