--- a/com.upload.domain/pom.xml
+++ b/com.upload.domain/pom.xml
@@ -3,23 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <groupId>com.gospell</groupId>
         <artifactId>com.upload</artifactId>
-        <groupId>com.60living</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>com.upload.domain</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>springboot</groupId>
-            <artifactId>common</artifactId>
-            <version>2.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>ws.schild</groupId>
-            <artifactId>jave-core</artifactId>
-            <version>2.7.3</version>
-        </dependency>
-    </dependencies>
 </project>
