--- a/com.upload.web/src/main/resources/application.properties
+++ b/com.upload.web/src/main/resources/application.properties
@@ -1,30 +1,9 @@
 server.port=8081
-server.tomcat.basedir=/tomcat
-spring.data.mongodb.uri=mongodb://192.168.0.20:17017,192.168.0.20:27017/upload
-spring.redis.url=redis://192.168.0.5:6379
+spring.data.mongodb.uri=mongodb://192.168.1.112:17017,192.168.1.112:27017/upload
+spring.redis.url=redis://192.168.1.112:6379
 spring.application.name=upload
 spring.servlet.multipart.max-file-size=104857600
 spring.servlet.multipart.max-request-size=104857600
 
-
+app.swagger.controller=com.upload.main.controller
 app.fileRootPath=/data
-
-#video
-app.ali.accessKey.id=
-app.ali.accessKey.secret=
-app.ali.video.call.back=http://upload.inteeer.com/callBack
-#job
-xxl.job.admin.addresses=http://job.inteeer.com
-xxl.job.executor.appname=upload-app
-xxl.job.executor.ip=
-xxl.job.executor.port=3008
-xxl.job.accessToken=
-xxl.job.executor.logpath=/logs
-xxl.job.executor.logretentiondays=3
-#th
-async.executor.thread.core_pool_size=10
-async.executor.thread.max_pool_size=20
-async.executor.thread.queue_capacity=99999
-async.executor.thread.name.prefix=async-executor-main
-
-
